--- a/Croatian/main/SoundRecorder.apk/res/values-hr/strings.xml
+++ b/Croatian/main/SoundRecorder.apk/res/values-hr/strings.xml
@@ -217,6 +217,7 @@
   <string name="korea_permission_record_resc">Za snimanje zvuka</string>
   <string name="korea_permission_storage">Pohrana</string>
   <string name="korea_permission_storage_desc">Za spremanje snimaka</string>
+  <string name="loading_hyper_xiaoai">Samo trenutak…</string>
   <string name="local_funcation_setting">Postavke na uređaju</string>
   <string name="loading">Samo trenutak…</string>
   <string name="loading_more">Samo trenutak…</string>
