--- a/Croatian/main/framework-ext-res.apk/res/values-hr-rHR/strings.xml
+++ b/Croatian/main/framework-ext-res.apk/res/values-hr-rHR/strings.xml
@@ -722,6 +722,7 @@ biste koristili prednju kameru</string>
   <string name="wallpaper_and_signature_title">Pozadine i potpisi</string>
   <string name="wallpaper_bright_title">Sjaj</string>
   <string name="wallpaper_group_ai_zone_title">AI pozadine</string>
+  <string name="wallpaper_group_arc_title">Lučna lampa</string>
   <string name="wallpaper_group_big_numbers_title">Veliki brojevi</string>
   <string name="wallpaper_group_blossom_title">Cvjetanje</string>
   <string name="wallpaper_group_creative_time_title">Kreativni satovi</string>
