--- a/Croatian/main/FileExplorer.apk/res/values-hr/strings.xml
+++ b/Croatian/main/FileExplorer.apk/res/values-hr/strings.xml
@@ -80,6 +80,9 @@
   <string name="by_size">Veličina</string>
   <string name="by_type">Tip</string>
   <string name="byteShort">B</string>
+  <string name="calendar_date_picker_a11y_next_month">Promijeni na sljedeći mjesec</string>
+  <string name="calendar_date_picker_a11y_prev_month">Promijeni na prethodni mjesec</string>
+  <string name="calendar_date_picker_day_of_week_column_header">%1$s</string>
   <string name="call_notification_answer_action">Odgovori</string>
   <string name="call_notification_answer_video_action">Video</string>
   <string name="call_notification_decline_action">Odbij</string>
@@ -375,11 +378,6 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="group_title_extra_new">Novo</string>
   <string name="guide_newfunc_content">Sada možete filtrirati formate datoteka, preurediti stavke i prelaziti s različitih prikaza dodirom na prečac.</string>
   <string name="guide_newfunc_title">Nova značajka</string>
-  <string name="guide_one_summary">Nedavne stavke grupirane su prema datumima.</string>
-  <string name="guide_one_title">Stavke raspoređene u vremensku crtu</string>
-  <string name="guide_three_summary">Dodajte, uklonite i preuredite prečace početne stranice.</string>
-  <string name="guide_three_title">Preuredite prečace</string>
-  <string name="guide_two_summary">Fotografije i snimke zaslona u galeriji su prema zadanim postavkama skrivene.</string>
   <string name="guide_two_title">Pogledajte samo bitne stavke</string>
   <string name="h5_ppt_to_pdf_introduce_title">O izradi PDF-a</string>
   <string name="hint_switch_to_grid_mode">Prebačeno na prikaz rešetke</string>
@@ -797,8 +795,10 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="pref_permission_manage_key_storage">Pristup fotografijama i datotekama na uređaju</string>
   <string name="pref_permission_not_allowed">Nije odobreno</string>
   <string name="preference_copied">\"%1$s\" je kopiran u međuspremnik.</string>
+  <string name="preview_title">Dodirnite za pregled</string>
+  <string name="preview_toast">"Ne mogu pregledati ovu datoteku"</string>
   <string name="privacy_policy">Pravila o privatnosti</string>
-  <string name="privacy_policy_renew">Ažurirana su Pravila o privatnosti</string>
+  <string name="privacy_policy_renew">Pravila o privatnosti su ažurirana</string>
   <string name="privacy_policy_renew_content"><Data>"Ažurirana su &lt;a href=\"%1$s\">Pravila o privatnosti&lt;/a> aplikacije Datoteke. Kako biste u potpunosti razumjeli svoja prava kao korisnika, kao i načine na koje koristimo vaše podatke, pročitajte i prihvatite novu verziju Pravila o privatnosti prije nego nastavite."</Data></string>
   <string formatted="false" name="privacy_recall_alert_description">Izbrišite sve stavke iz Mi Drive-a kako biste mogli povući svoju suglasnost na Pravila o privatnosti. Slijedite ove korake za brisanje stavki:&lt;br />&lt;xliff:g id=privacy_recall_alert_description_list_1 refersto=1>%1d&lt;/xliff:g>. Na početnoj stranici Mi Drivea pritisnite i držite stavku kako bi se prikazala tipka \"Odaberi sve\". Koristite ovu tipku za odabir do &lt;xliff:g id=delete_number refersto=200>%2d&lt;/xliff:g> datoteka i njihovo brisanje. Ako ima više od &lt;xliff:g id=delete_max refersto=200>%3d&lt;/xliff:g> datoteka, ponovite ovaj postupak.&lt;br />&lt;xliff:g id=privacy_recall_alert_description_list_2 refersto=2>%4d&lt;/xliff:g>. Nakon toga izbrišite svoje Nedavno izbrisane stavke.</string>
   <string formatted="false" name="privacy_recall_alert_reminder_card_summary">"&lt;xliff:g id=privacy_recall_alert_reminder_card_summary_list_1 refersto=1>%1d&lt;/xliff:g>. Preporučujemo da napravite sigurnosnu kopiju svojih stavki prije njihovog brisanja. Da biste to učinili, posjetite i.mi.com, kliknite Mi Drive i preuzmite svoje stavke na računalo.&lt;br />&lt;xliff:g id=privacy_recall_alert_reminder_card_summary_list_2 refersto=2>%2d&lt;/xliff:g>. Imajte na umu da se stavke izbrisane iz nedavno izbrisanih stavki ne mogu naknadno vratiti."</string>
@@ -878,7 +878,15 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="search_text_hint">Traži datoteke</string>
   <string name="search_title">Traži</string>
   <string name="search_title_hint">Traži</string>
-  <string name="select_dest_folder">Odaberi mapu</string>
+  <string name="security_description">Ostale aplikacije mogu pristupiti samo kontaktima koje odaberete kako bi zaštitile vašu privatnost</string>
+  <string name="security_title">Privatni pristup</string>
+  <string name="select_category_apk">Odaberite APK-ove</string>
+  <string name="select_category_document">Odaberite dokumente</string>
+  <string name="select_category_music">Odaberite glazbu</string>
+  <string name="select_category_picture">Odaberite slike</string>
+  <string name="select_category_video">Odaberite videozapise</string>
+  <string name="select_category_zip">Odaberite arhive</string>
+  <string name="select_dest_folder">Odaberite mapu</string>
   <string name="select_image">Slike</string>
   <string name="select_music">Glazba</string>
   <string name="select_pdf">Odaberite PDF</string>
