--- a/Croatian/main/MiSightService.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiSightService.apk/res/values-hr/strings.xml
@@ -57,6 +57,7 @@
    <string name="intelligence_notification_wet_title">Vlaga u priključku za punjenje</string>
    <string name="light_sensor_name">Prednji senzor svjetla</string>
    <string name="magnetic_sensor_name">Magnetski senzor</string>
+   <string name="misight_app_name">Praćenje kvalitete sustava</string>
    <string name="miuix_access_state_desc">Odabrano</string>
    <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
    <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
