--- a/Croatian/main/Notes.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Notes.apk/res/values-hr/strings.xml
@@ -292,6 +292,9 @@
   <string name="btn_next">Dalje</string>
   <string name="button_new_note">"Novo"</string>
   <string name="button_talkback">Tipka</string>
+  <string name="calendar_date_picker_a11y_next_month">Promijeni na sljedeći mjesec</string>
+  <string name="calendar_date_picker_a11y_prev_month">Promijeni na prethodni mjesec</string>
+  <string name="calendar_date_picker_day_of_week_column_header">%1$s</string>
   <string name="call_folder_name">Bilješke poziva</string>
   <string name="call_notification_answer_action">Odgovor</string>
   <string name="call_notification_answer_video_action">Video</string>
@@ -1374,6 +1377,8 @@
   <string name="todo_schedule_time_yesterday">Jučer</string>
   <string name="todo_schedule_time_ymdhm">dd.MM.yyyy HH:mm</string>
   <string name="todo_search_hint">Traži zadatke</string>
+  <string name="todo_time_picker_dialog_spinner_title">Vrijeme</string>
+  <string name="todo_time_picker_dialog_title">Postavi vrijeme podsjetnika</string>
   <string name="todo_time_picker_title">Postavi podsjetnik</string>
   <string name="todo_user_guide_fw_pop">Dodaj prečac Poč. zaslona</string>
   <string name="todo_user_guide_tip1">Dobrodošli u Zadatke!</string>
@@ -1475,6 +1480,7 @@
   <string name="widget_size_item_medium">Srednji</string>
   <string name="widget_size_item_small">Mali</string>
   <string name="widget_size_item_super_big">Extra velik</string>
+  <string name="widget_size_item_title">Odaberi veličinu</string>
   <string name="widget_size_not_support">"Extra veliki widgeti nisu podržani na ovom uređaju"</string>
   <string name="widget_take_notes_title">Bilješke</string>
   <string name="widget_under_privacy_mode">"Ne mogu pregledavati bilješke u Gost načinu rada"</string>
